# NewPlannerLangChain

./: .gitignore  README.md  config.py  main.py  model_manager.py  openapi.yaml  pyproject.toml
backend/: main.py  models.py
backend/routes/: planner.py
backend/services/: llm_service.py
myapp/: README.md  angular.json  package-lock.json  package.json
myapp/src/: styles.css
myapp/src/app/: app.html  app.ts
myapp/src/app/components/chat/: chat.component.css  chat.component.html  chat.component.ts
myapp/src/app/components/sidebar/: sidebar.component.html  sidebar.component.ts
myapp/src/app/models/: planner.models.ts
myapp/src/app/pipes/: markdown.pipe.ts
myapp/src/app/services/: planner.service.ts
