[project]
name = "newplanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.1.3",
    "langchain-anthropic>=1.2.0",
    "langchain-cerebras>=0.8.2",
    "langchain-cohere>=0.5.0",
    "langchain-google-genai>=4.0.0",
    "langchain-groq>=1.1.0",
    "langchain-mistralai>=1.1.0",
]
