[project]
name = "newplanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.124.2",
    "langchain>=1.1.3",
    "langchain-anthropic>=1.2.0",
    "langchain-cerebras>=0.8.2",
    "langchain-cohere>=0.5.0",
    "langchain-core>=1.1.3",
    "langchain-google-genai>=4.0.0",
    "langchain-groq>=1.1.0",
    "langchain-mistralai>=1.1.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]
